# stingtaoCreateDesktop

./: .gitignore  LICENSE  PRD.md  README.md  index.html  package-all.sh  package-lock.json  package.json  vite.config.ts
.cursor/: PRD.md  UIUX-Guide.md  api-spec.md  current-dev.md  cursor-rule.md  data-structure.md  milestone.md  system-analysis.md  tech-architecture-and-refactor.md
.cursor/rules/: milestone-review-template.md  referecedotcursordirectory.mdc
.cursor/scripts/: check-milestone.js
.github/workflows/: ci.yml
e2e/: blog-project-flow.spec.ts  chapter-flow.spec.ts
src/: .eslintrc.js  App.vue  main.ts  package-lock.json  package.json
src-tauri/: Cargo.toml  settings.db  tauri.conf.json
src-tauri/icons/: stingtaoCreateDesktop.icns  stingtaoCreateDesktop_rebuild.icns
src-tauri/src/: ai_agent.rs  db.rs  main.rs  schema.sql
src/__tests__/: chapterPromptBuilder.spec.ts
src/assets/: theme.css
src/components/: AIAssistant.vue  Editor.vue  LanguageSelector.vue  NestedNavigation.vue  Settings.vue
src/composables/: useAIPromptBuilder.ts  useTour.ts
src/lib/: content.ts  db.ts  i18n.ts  project.ts  sqlite.ts
src/locales/: en.json  ja.json  ko.json  zh-TW.json  zh.json  zh_TW.json
src/router/: index.ts
src/stores/: project.ts
src/styles/: BaseLayout.css  CreateBlogProject.css  CreateBookProject.css  EditProject.css  NewBlogArticle.css  Projects.css  ThreeColumnLayout.css  TwoColumnLayout.css
src/views/: BookChapterDraft.vue  CreateBlogProject.vue  CreateBookProject.vue  EditChapter.vue  EditProject.vue  (+6 more)
test-results/: .last-run.json
(+24 files in other folders)
